[package]
name = "derive_macro"
version = "0.1.0"
authors = ["Kolsky <kolskytr@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.64", features = ["full"] }
quote = "1.0"

[lib]
proc-macro = true